# Computer-Vision

./: README.md
Epipolar Geometry, Disparity map,  Image Rectification/: CMakeLists.txt  README.md
Epipolar Geometry, Disparity map,  Image Rectification/images/: corresp.txt
Epipolar Geometry, Disparity map,  Image Rectification/src/: DisparityMap.cpp  EpipolarGeometry.cpp  ImageRectification.cpp  Parser.cpp  main.cpp  sheet11.cpp
Filters, Histogram equalization/: CMakeLists.txt  README  README.md
Filters, Histogram equalization/src/: Filtering.cpp  HistogramEqualization.cpp  IntegralImages.cpp  SeparableFilters.cpp  main.cpp
Gaussian mixture models, expectation maximization/: CMakeLists.txt  README.md
Gaussian mixture models, expectation maximization/src/: GMEM.cpp  main.cpp
Gaussian mixure models, Expectation maximization/: CMakeLists.txt  README.md
Gaussian mixure models, Expectation maximization/src/: GMEM.cpp  main.cpp
Hough transform, kmeans, mean shift/: CMakeLists.txt  README  README.md
Hough transform, kmeans, mean shift/src/: HoughTransform.cpp  KMeans.cpp  MeanShift.cpp  main.cpp
Image Pyramids, template matching/: CMakeLists.txt  README
Image Pyramids, template matching/src/: ChamferMatching.cpp  ImageBlending.cpp  Pyramids.cpp  main.cpp
Optical flow, Horn schnuck method, Lucas Kanade method/: CMakeLists.txt  README.md
Optical flow, Horn schnuck method, Lucas Kanade method/src/: main.cpp
Particle filter tracking/: CMakeLists.txt  README.md
Particle filter tracking/src/: Particle.cpp  ParticleSet.cpp  main.cpp
Procrustes Analysis, Inference/: CMakeLists.txt  README.md
Procrustes Analysis, Inference/images/: readme.txt
Procrustes Analysis, Inference/src/: ProcrustesAnalysis.cpp  ShapeModel.cpp  main.cpp
SIFT, RANSAC, Panorama/: CMakeLists.txt  README.md
SIFT, RANSAC, Panorama/src/: Ransac.cpp  main.cpp
Saliency maps/: CMakeLists.txt  README.md
Saliency maps/src/: CSPyramids.cpp  GaussianPyramids.cpp  Group.cpp  LaplacianPyramids.cpp  OrientedPyramids.cpp  SaliencyMap.cpp  task1.cpp
Snakes, Geodesic active contours/: CMakeLists.txt  README.md
Snakes, Geodesic active contours/src/: GeodesicActiveContours.cpp  Snakes.cpp  main.cpp
