cmake_minimum_required(VERSION 2.8)
project(Project07)
include_directories(src)
set(dir ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
set(LIBRARY_OUTPUT_PATH ${dir} CACHE PATH "Build directory" FORCE)
find_package(OpenCV REQUIRED)
add_executable(Project07 src/main.cpp)
target_link_libraries(Project07 ${OpenCV_LIBS})
